# AEGIS

./: .gitattributes  .gitignore  Attitude_verify.py  Crime_stats.py  README.md  aegis_cli.py  debug.py  drone_driver_playground.py  install_dev.sh  live_tellocam.py  position_verify2.py  pyproject.toml  requirements.txt  return_to_home_v2.py  test_takeoff.py  xyz_telemetry_test.py
Computer Vision/: 2D-Hand-Tracker.py  depth_perception.py  human_pose_tracker_3d.py
app/: index.html  package-lock.json  package.json
app/electron/: main.ts  preload.ts
app/src/: main.js  style.css
app/src/admin/: admin.css  admin.js
app/src/auth/: login.css  login.js
app/src/user/: user.css  user.js
cv/: 2D-Hand-Tracker.py  depth_perception.py  depth_perception_mac.py  human_pose_tracker_3d.py
flight_ops/: README.md  __init__.py  debug.py  main.py
flight_ops/config/: __init__.py  aoo.py  config.py  types.py
flight_ops/control/: __init__.py  controller.py  distance_estimator.py  flight_data_collector.py  tello_executor.py
flight_ops/core/: __init__.py  behavior_manager.py  mission_manager.py
flight_ops/decision/: __init__.py  find_object.py  mdp_policy.py  tester_decision.py
flight_ops/perception/: __init__.py  extractor_interface.py  state_extractor.py
flight_ops/safety/: __init__.py  safety_guard.py
flight_ops/utils/: __init__.py
