[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "aegis"
version = "0.1.0"
description = "Aeigs Proj"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "opencv-python>=4.5.0",
    "pyyaml>=6.0.1",
    "mediapipe>=0.10.0,<0.10.31",
    "numpy>=1.20.0",
    "djitellopy>=2.0.0",
]

[project.scripts]
aegis = "aegis_cli:main"

[tool.setuptools.packages.find]
include = []  # no packages, only py_modules

[tool.setuptools]
py-modules = ["aegis_cli"]
